still working on it

--- a/less/index.less
+++ b/less/index.less
@@ -54,6 +54,18 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+	background-color: lightsalmon;
+	
 }
 
+.flex-row() {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	justify-content: space-evenly;
+}
+
+nav {
+	.flex-row()
+}
